# beelabel

./: README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
beelabel/: __init__.py
examples/: compute5.ipynb
jupyter/: Demo.ipynb
labelling/: SOLVED_ParticlePathTest.ipynb  alignment.py  compute2.ipynb  compute4.ipynb  index.html  label.js  server.py  temp.csv  trajectory_gp.py
src/beelabel/: alignment.py  trajectory_particlefilter.py
tests/: test_alignment.py
